spacing and border issue | Timeline and Landing

--- a/src/App.css
+++ b/src/App.css
@@ -258,3 +258,20 @@ ul {
   color: #ffffff;
   margin-left: 0.5em;
 }
+
+.animate-h1 h1 {
+  animation: type 2s steps(23);
+  overflow: hidden;
+  white-space: nowrap;
+  /* border-right: 1px solid #08aca3; */
+  width: 23ch;
+}
+
+@keyframes type {
+  0% {
+    width: 0ch;
+  }
+  100% {
+    width: 23ch;
+  }
+}
